# esp32c3_ble_canbus_v1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/: CMakeLists.txt
components/include/: canbus_task.h  esp_wrapper.h  sht3x.h  sht3x_platform.h
components/src/: canbus_task.c  sht3x.c
main/: Kconfig.projbuild  main.c  main.h
